[package]
name = "markifier"
description = "small application for analysing marked work"
homepage = "https://github.com/eeeeeta/markifier"
repository = "https://github.com/eeeeeta/markifier"
readme = "README.md"
license = "Unlicense"
version = "0.1.0"
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]

[dependencies]
regex = "0.2.1"
toml = "0.3"
serde = "0.9"
serde_derive = "0.9"

[[bin]]
name = "markifier"
